data/derived/comb/progs/unify/prog8528.ml.out
Characters 112-129:
  let seen' = if List.mem(h, seen) then 
                 ^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
